# inveniordm-dev

./: .gitignore  .invenio  Pipfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg  pnpm-lock.yaml  pyproject.toml  translation_distribution.py
docker/nginx/: test.crt  test.key
docker/pgadmin/: servers.json
invenio_cli/cli/: translations.py
invenio_cli/commands/: translations.py
js_translations/: da.json
site/: .gitkeep  setup.cfg
site/inveniordm_dev/: views.py  webpack.py
